# ai-coding-tools

./: AGENTS.md
.agents/skills/commit/: SKILL.md
.agents/skills/engineering-workflow/: SKILL.md
.agents/skills/multi-agent-coding-toolchain/: SKILL.md
.agents/skills/spec-driven-development/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md
.github/workflows/: docker.yml
docker/: .env  .env.example  .env.nas.example  Dockerfile  README.md  VERSIONS  deploy-nas.sh  docker-compose.nas.yml  docker-compose.yml  supervisord.conf
docker/scripts/: entrypoint.sh  init-wizard.sh  langgraph-resume  langgraph-trigger  langgraph-trigger-photo-sorter  opencode-tool  validate-toolchain.sh
docker/templates/: langgraph.json  openclaw.json  opencode-config.json  skills-list.txt
docker/templates/langgraph-src/: auto_programming.py  checkpointer.py  memory.py  model_switch.py  photo_sorter.py  pyproject.toml  requirements.txt
docker/templates/memory/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
docker/templates/openclaw-skills/auto-programming/: SKILL.md
docker/templates/openclaw-skills/query-progress/: SKILL.md
docker/templates/opencode-skills/engineering-workflow/: SKILL.md
docker/templates/opencode-skills/mermaid-diagrams/: SKILL.md
docker/templates/opencode-skills/spec-driven-development/: SKILL.md
