[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolchain-langgraph"
version = "0.1.0"
description = "LangGraph workflows for multi-agent coding toolchain"
requires-python = ">=3.11"
dependencies = [
    "langgraph-cli[inmem]==0.4.29",
    "langgraph-checkpoint-sqlite==3.1.0",
    "openai==1.75.0",
    "requests>=2.32.0",
    "pillow==12.2.0",
    "piexif==1.1.3",
    "python-dateutil==2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
